Dashboard, tags, menu

--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -85,82 +85,82 @@
       </div>
       <!-- /. box -->
     </div>
-    <div class="col-lg-4">
-      <div class="box box-info">
-        <div class="box-header">
-          <i class="fa fa-envelope"></i>
+    <!--<div class="col-lg-4">-->
+      <!--<div class="box box-info">-->
+        <!--<div class="box-header">-->
+          <!--<i class="fa fa-envelope"></i>-->
 
-          <h3 class="box-title">{% trans 'quick email'|title %}</h3>
-        </div>
-        <div class="box-body">
-          <form action="#" method="post">
-            <div class="form-group">
-              <input type="email" class="form-control" name="emailto" placeholder="{% trans 'email to'|title %}:"/>
-            </div>
-            <div class="form-group">
-              <input type="text" class="form-control" name="subject" placeholder="{% trans 'subject'|title %}"/>
-            </div>
-            <div>
-              <textarea class="textarea" placeholder="{% trans 'message'|title %}"
-                        style="width: 100%; height: 125px; font-size: 14px; line-height: 18px; border: 1px solid #dddddd; padding: 10px;"></textarea>
-            </div>
-          </form>
-        </div>
-        <div class="box-footer clearfix">
-          <button class="pull-right btn btn-default" id="sendEmail">{% trans 'send'|title %} <i
-              class="fa fa-arrow-circle-right"></i></button>
-        </div>
-      </div>
-    </div>
+          <!--<h3 class="box-title">{% trans 'quick email'|title %}</h3>-->
+        <!--</div>-->
+        <!--<div class="box-body">-->
+          <!--<form action="#" method="post">-->
+            <!--<div class="form-group">-->
+              <!--<input type="email" class="form-control" name="emailto" placeholder="{% trans 'email to'|title %}:"/>-->
+            <!--</div>-->
+            <!--<div class="form-group">-->
+              <!--<input type="text" class="form-control" name="subject" placeholder="{% trans 'subject'|title %}"/>-->
+            <!--</div>-->
+            <!--<div>-->
+              <!--<textarea class="textarea" placeholder="{% trans 'message'|title %}"-->
+                        <!--style="width: 100%; height: 125px; font-size: 14px; line-height: 18px; border: 1px solid #dddddd; padding: 10px;"></textarea>-->
+            <!--</div>-->
+          <!--</form>-->
+        <!--</div>-->
+        <!--<div class="box-footer clearfix">-->
+          <!--<button class="pull-right btn btn-default" id="sendEmail">{% trans 'send'|title %} <i-->
+              <!--class="fa fa-arrow-circle-right"></i></button>-->
+        <!--</div>-->
+      <!--</div>-->
+    <!--</div>-->
 
-    <div class="col-lg-8">
-      <!-- TO DO List -->
-      <div class="box box-primary">
-        <div class="box-header">
-          <i class="ion ion-clipboard"></i>
+    <!--<div class="col-lg-8">-->
+      <!--&lt;!&ndash; TO DO List &ndash;&gt;-->
+      <!--<div class="box box-primary">-->
+        <!--<div class="box-header">-->
+          <!--<i class="ion ion-clipboard"></i>-->
 
-          <h3 class="box-title">{% trans 'to do list'|title %}</h3>
+          <!--<h3 class="box-title">{% trans 'to do list'|title %}</h3>-->
 
-          <div class="box-tools pull-right">
-            <ul class="pagination pagination-sm inline">
-              <li><a href="#">&laquo;</a></li>
-              <li><a href="#">1</a></li>
-              <li><a href="#">2</a></li>
-              <li><a href="#">3</a></li>
-              <li><a href="#">&raquo;</a></li>
-            </ul>
-          </div>
-        </div>
-        <!-- /.box-header -->
-        <div class="box-body">
-          <ul class="todo-list">
-            <li>
-              <!-- drag handle -->
-            <span class="handle">
-                <i class="fa fa-ellipsis-v"></i>
-                <i class="fa fa-ellipsis-v"></i>
-            </span>
-              <!-- checkbox -->
-              <input type="checkbox" value="" name=""/>
-              <!-- todo text -->
-              <span class="text">Design a nice theme</span>
-              <!-- Emphasis label -->
-              <small class="label label-danger"><i class="fa fa-clock-o"></i> 2 mins</small>
-              <!-- General tools such as edit or delete-->
-              <div class="tools">
-                <i class="fa fa-edit"></i>
-                <i class="fa fa-trash-o"></i>
-              </div>
-            </li>
-          </ul>
-        </div>
-        <!-- /.box-body -->
-        <div class="box-footer clearfix no-border">
-          <button class="btn btn-default pull-right"><i class="fa fa-plus"></i> {% trans 'Add item'|title %}</button>
-        </div>
-      </div>
-      <!-- /.box -->
-    </div>
+          <!--<div class="box-tools pull-right">-->
+            <!--<ul class="pagination pagination-sm inline">-->
+              <!--<li><a href="#">&laquo;</a></li>-->
+              <!--<li><a href="#">1</a></li>-->
+              <!--<li><a href="#">2</a></li>-->
+              <!--<li><a href="#">3</a></li>-->
+              <!--<li><a href="#">&raquo;</a></li>-->
+            <!--</ul>-->
+          <!--</div>-->
+        <!--</div>-->
+        <!--&lt;!&ndash; /.box-header &ndash;&gt;-->
+        <!--<div class="box-body">-->
+          <!--<ul class="todo-list">-->
+            <!--<li>-->
+              <!--&lt;!&ndash; drag handle &ndash;&gt;-->
+            <!--<span class="handle">-->
+                <!--<i class="fa fa-ellipsis-v"></i>-->
+                <!--<i class="fa fa-ellipsis-v"></i>-->
+            <!--</span>-->
+              <!--&lt;!&ndash; checkbox &ndash;&gt;-->
+              <!--<input type="checkbox" value="" name=""/>-->
+              <!--&lt;!&ndash; todo text &ndash;&gt;-->
+              <!--<span class="text">Design a nice theme</span>-->
+              <!--&lt;!&ndash; Emphasis label &ndash;&gt;-->
+              <!--<small class="label label-danger"><i class="fa fa-clock-o"></i> 2 mins</small>-->
+              <!--&lt;!&ndash; General tools such as edit or delete&ndash;&gt;-->
+              <!--<div class="tools">-->
+                <!--<i class="fa fa-edit"></i>-->
+                <!--<i class="fa fa-trash-o"></i>-->
+              <!--</div>-->
+            <!--</li>-->
+          <!--</ul>-->
+        <!--</div>-->
+        <!--&lt;!&ndash; /.box-body &ndash;&gt;-->
+        <!--<div class="box-footer clearfix no-border">-->
+          <!--<button class="btn btn-default pull-right"><i class="fa fa-plus"></i> {% trans 'Add item'|title %}</button>-->
+        <!--</div>-->
+      <!--</div>-->
+      <!--&lt;!&ndash; /.box &ndash;&gt;-->
+    <!--</div>-->
   </div>
 {% endblock %}
 
