--- a/templates/labs/lab_list.html
+++ b/templates/labs/lab_list.html
@@ -91,7 +91,7 @@
         </div>
         <div class="box-footer">
           <a class="btn btn-primary btn-block btn-flat" href="{% url 'labs:create_test_lab' %}">
-            <i class="fa fa-plus"></i> {% trans 'Create <i>Lorem Impsum</i> lab' %}
+            <i class="fa fa-plus"></i> {% trans 'Create <i>demo</i> lab' %}
           </a>
           <a href="{% url 'labs:create' %}" class="btn btn-default btn-block btn-flat">
             <i class="fa fa-plus"></i> {% trans 'Create empty lab' %}
