--- a/templates/labs/lab_list.html
+++ b/templates/labs/lab_list.html
@@ -9,7 +9,7 @@
       <div class="box box-solid">
         <div class="box-footer">
           <a class="btn btn-primary btn-block btn-flat" href="{% url 'labs:create_test_lab' %}">
-            <i class="fa fa-plus"></i> <i class="fa fa-plus"></i> {% trans 'Create <i>Lorem Impsum</i> lab' %}
+            <i class="fa fa-plus"></i> <i class="fa fa-plus"></i> {% trans 'Create <i>test</i> lab' %}
           </a>
           <a href="{% url 'labs:create' %}" class="btn btn-default btn-block btn-flat">
             <i class="fa fa-plus"></i> {% trans 'Create empty lab' %}
