Move to login after activation

--- a/templates/registration/form.html
+++ b/templates/registration/form.html
@@ -2,6 +2,8 @@
 {% load i18n bootstrap_tags %}
 
 {% block content %}
+{% block alert_area %}{% endblock %}
+
   <div class="header">{% block box_header %}{% endblock %}</div>
   <form action="" method="post">
     <div class="body bg-gray">
