--- a/templates/modal.html
+++ b/templates/modal.html
@@ -1,7 +1,7 @@
 {% load i18n bootstrap_tags %}
 
 <!-- Modal -->
-<div class="modal fade" id="{{ modal_id|default:'modal' }}" tabindex="-1" role="dialog" aria-labelledby="Modal"
+<div class="modal fade {{ class }}" id="{{ modal_id|default:'modal' }}" tabindex="-1" role="dialog" aria-labelledby="Modal"
      aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
