--- a/templates/tabs/unit_comments.html
+++ b/templates/tabs/unit_comments.html
@@ -1,1 +1,1 @@
-{% include 'comments/comment_form.html' with not_modal="1" not_collapse="1" %}
+{% include 'comments/comment_form.html' with not_collapse="1" modal_id="unit-comments-modal" %}
