--- a/templates/comments/comment_form.html
+++ b/templates/comments/comment_form.html
@@ -3,7 +3,7 @@
   <div class="row">
     <div class="col-xs-12">
       <!-- Success box -->
-      <div class="box box-solid box-info collapsed-box comments-block">
+      <div class="box box-solid box-info comments-block">
         {% if not not_collapse %}
         <div class="box-header">
           <h3 class="box-title"><i class="fa fa-comments-o"></i> {% trans 'Comments' %}</h3>
