--- a/templates/comments/comment.html
+++ b/templates/comments/comment.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 <div class="col-xs-12 comment-block" data-pk="{{ comment.pk }}">
-  <div class="list-group-item list-group-item-info list-group-item-sm disabled">
+  <div class="list-group-item list-group-item-info list-group-item-sm">
     <strong>{{ comment.init_user.full_name }}</strong>
 
     <div class="pull-right">
@@ -19,7 +19,7 @@
       {% endif %}
     </div>
   </div>
-  <div class="list-group-item list-group-item-sm disabled">
+  <div class="list-group-item list-group-item-sm">
     <div class="comment-context">{{ comment|safe }}</div>
   </div>
 </div>
