--- a/templates/base.html
+++ b/templates/base.html
@@ -37,28 +37,22 @@
   {% block menu %}
     <header class="main-header">
       <a href="{% url 'labs:list' %}" class="logo">
-        <!-- Add the class icon to your logo image or logo icon to add the margining -->
-        LabRepo.org
+        <!-- logo for regular state and mobile devices -->
+        <span class="logo-lg"><b>LabRepo</b>.org</span>
       </a>
-      <!-- Header Navbar: style can be found in header.less -->
+
       <nav class="navbar navbar-static-top" role="navigation">
         <!-- Sidebar toggle button-->
-        <a href="#" class="navbar-btn sidebar-toggle" data-toggle="offcanvas" role="button">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
+        <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
+            <span class="sr-only">Toggle navigation</span>
         </a>
 
-        <div class="navbar-left">
+        <div class="navbar-custom-menu">
           <ul class="nav navbar-nav">
             {% if lab %}
               <li><a href="{{ lab.get_absolute_url }}">{{ lab }}</a></li>
             {% endif %}
           </ul>
-        </div>
-
-        <div class="navbar-custom-menu">
           <ul class="nav navbar-nav">
             {% if labs_list %}
               <li class="dropdown notifications-menu">
